--- a/src/component/SingleProgrammer/SingleProgrammer.css
+++ b/src/component/SingleProgrammer/SingleProgrammer.css
@@ -1,6 +1,10 @@
 .card-info {
-    margin-top: 50px;
-    border: 2px solid yellowgreen;
+    padding: 5px;
+    margin: 10px;
+    text-align: center;
+    box-shadow: 2px 2px 4px gray;
+    border-radius: 3px;
+
 }
 
 .card-info h3 {
@@ -9,10 +13,6 @@
 }
 
 .card-info img {
-    width: 210px;
-    height: 240px;
-}
-
-.cart-text {
-    border: 2px solid red;
+    width: 260px;
+    height: 275px;
 }
