--- a/src/component/programmer/Programmer.css
+++ b/src/component/programmer/Programmer.css
@@ -1,3 +1,11 @@
+.task-sentence {
+    display: inline;
+    margin: 30px;
+    color: rgb(36, 34, 34);
+    border: none;
+
+}
+
 .card-section {
     display: grid;
     grid-template-columns: 1fr 1fr 1fr;
@@ -8,7 +16,19 @@
     grid-template-columns: 3fr 1fr;
 }
 
-.cart-text {
-    margin-left: 3px;
+.cart-body {
+    margin-left: 40px;
     border: 2px solid red;
+}
+
+@media only screen and (max-width: 600px) {
+    .card-section {
+        display: grid;
+        grid-template-columns: 1fr;
+    }
+
+    .home-part {
+        display: grid;
+        grid-template-columns: 1fr 1fr;
+    }
 }
