--- a/src/component/programmer/Programmer.css
+++ b/src/component/programmer/Programmer.css
@@ -18,7 +18,13 @@
 
 .cart-body {
     margin-left: 40px;
-    border: 2px solid red;
+    /* border: 2px solid red; */
+    box-shadow: 3px 3px 14px gray;
+    margin-right: 15px;
+    margin-bottom: 5px;
+    padding: 10px;
+    border: none;
+    border-radius: 15px;
 }
 
 @media only screen and (max-width: 600px) {
